--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Select Operation:</p>
         <select name="operation">
             <option value="add">Addition (+)</option>
-            <option value="sub">Subtraction (-)</option>  <!-- Changed from 'subs' to 'sub' -->
+            <option value="sub">Subtraction (-)</option>
             <option value="multi">Multiplication (×)</option>
             <option value="divide">Division (÷)</option>
         </select>
